--- a/app/src/main/res/layout/item_top_game.xml
+++ b/app/src/main/res/layout/item_top_game.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="166dp"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="8dp"
-    android:background="@color/dark_blue">
+    android:background="@color/dark_blue"
+    android:padding="8dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/boxRoot"
         android:layout_width="150dp"
         android:layout_height="200dp"
+        android:backgroundTint="@color/dark_blue"
         app:cardCornerRadius="3dp"
         app:cardElevation="1dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:backgroundTint="@color/dark_blue">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/box"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:adjustViewBounds="true"/>
+            android:adjustViewBounds="true" />
 
     </androidx.cardview.widget.CardView>
 
@@ -29,12 +29,12 @@
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
         android:textColor="@color/white"
         android:textSize="14sp"
-        android:layout_marginTop="4dp"
-        android:layout_marginStart="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="4dp"
-        app:layout_constraintTop_toBottomOf="@id/boxRoot"/>
+        app:layout_constraintTop_toBottomOf="@id/boxRoot" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
