--- a/app/src/main/res/layout/fragment_rate.xml
+++ b/app/src/main/res/layout/fragment_rate.xml
@@ -1,65 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/dark_blue">
 
     <TextView
         android:id="@+id/rateUsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="32dp"
+        android:text="@string/rate_me"
+        android:textColor="@color/white"
         android:textSize="32sp"
-        android:text="Rate me!"
-        android:textColor="@color/white" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottie"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginVertical="16dp"
-        app:layout_constraintTop_toBottomOf="@id/rateUsText"
         app:layout_constraintBottom_toTopOf="@id/ratingBar"
-        app:lottie_rawRes="@raw/rate_animation"
+        app:layout_constraintTop_toBottomOf="@id/rateUsText"
+        app:lottie_autoPlay="true"
         app:lottie_loop="true"
-        app:lottie_autoPlay="true"/>
+        app:lottie_rawRes="@raw/rate_animation" />
 
     <RatingBar
         android:id="@+id/ratingBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:numStars="5"
-        android:background="#374368"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="32dp"
-        app:layout_constraintBottom_toTopOf="@id/feedback"/>
+        android:background="#374368"
+        android:numStars="5"
+        app:layout_constraintBottom_toTopOf="@id/feedback"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/feedback"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:lines="8"
-        app:layout_constraintBottom_toTopOf="@id/sendFeedback"
         android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="32dp"
-        android:gravity="top|start"
-        android:padding="16dp"
         android:background="@drawable/feedback_bg"
-        android:scrollbars="vertical" />
+        android:gravity="top|start"
+        android:lines="8"
+        android:padding="16dp"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toTopOf="@id/sendFeedback" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/sendFeedback"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="16dp"
         android:backgroundTint="@color/button_color"
+        android:text="@string/send_feedback"
         android:textColor="@color/white"
-        android:text="@string/send_feedback"/>
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
